syntax = "proto3";
// protoc --go_out=plugins=grpc:. *.proto

package user;

service User {
    rpc GetUserByID(UserID) returns (UserAndError) {}
    rpc GetUserBySessionID(SessionID) returns (UserAndError) {}
    rpc UpdateUser(UserToUpdate) returns (Error) {}
    rpc UpdateUserAvatar(UserToUpdateAvatar) returns (Error) {}
    rpc GetLeaderUsers(UserID) returns (Users) {}
    rpc GetAvatarUrlByName(UserName) returns (AvatarUrl) {}
}

message UserID {
    int32 ID = 1;
}

message UserData {
    string email = 1;
    string password = 2;
    string name = 3;
}

message Error {
    string error = 1;
}

message UserAndError {
    UserData user = 1;
    Error error = 2;
}

message SessionID {
    string id = 1;
}

message UserToUpdate {
    int32 userID = 1;
    string password = 2;
    string name = 3;
}

message UserToUpdateAvatar {
    int32 userID = 1;
    bytes avatarFile = 2;
}

message UserName {
    string name = 1;
}

message Users {
    repeated UserData user = 1;
}

message AvatarUrl {
    string avatarUrl = 1;
}
